Finalize for submission

--- a/cs542_report.ipynb
+++ b/cs542_report.ipynb
@@ -1533,13 +1533,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "id": "kFhVSz9X43tz"
    },
    "outputs": [],
    "source": [
-    "def agent(max_retry=30, model='qwen3'):\n",
+    "def agent(model='qwen3'):\n",
     "\n",
     "    system_prompt = (\n",
     "        f'Think step by step. You are playing {game}, an interactive fiction game. You must analyze the scenario the game presents to you and choose an action that will make progress. Your goal is to finish the game\\n'\n",
@@ -2699,7 +2699,7 @@
     "\n",
     "Nonetheless, here is the loss curve from training a model using LoRA for 500 steps. We discuss this model's performance in more detail at the end of this report. This loss plot shows that, perhaps unsurprisingly, the model learns how to replicate the training data fairly well.\n",
     "\n",
-    "![LoRA Loss](lora-loss-plot.svg)"
+    "![LoRA Loss](images/lora-loss-plot.svg)"
    ]
   },
   {
@@ -2755,7 +2755,7 @@
     "The full training code is contained under the file \"adventure/grpo.py\", and is omitted here for brevity.\n",
     "GRPO loss shows a much different behavior than the LoRA loss curve, likely due to unpredictability in the reward function. There is not a noticeable difference in loss between the start and end of training.\n",
     "\n",
-    "![GRPO loss](grpo-loss-plot.svg)\n",
+    "![GRPO loss](images/grpo-loss-plot.svg)\n",
     "\n",
     "Applying GRPO on top of a previously fine-tuned model appeared to improve performance enough to be the best of the approaches we tried. It obtained a score of 53 in the game and reached the \"Entrance to Hades\" location before being eaten by a grue. However, its effectiveness was still somewhat limited for this task. One potential reason is that, unlike the training process models using a framework like Gymnasium might undergo, the space of possible situations the model might be in is still constrained by an input dataset. One potential mitigation is to explore the world further than what the walkthrough describes."
    ]
@@ -3228,7 +3228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "id": "tI6hBsZ5oTFz"
    },
@@ -3237,7 +3237,7 @@
     "from openai import OpenAI\n",
     "\n",
     "from dotenv import load_dotenv\n",
-    "load_dotenv();\n",
+    "load_dotenv()\n",
     "\n",
     "game = 'zork1.z5'\n",
     "GAMES_DIR = \"z-machine-games-master/jericho-game-suite\"\n",
@@ -3246,14 +3246,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "client = OpenAI(\n",
     "    # This is the default and can be omitted\n",
     "    api_key=os.environ.get(\"OPENAI_API_KEY\"),\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -3504,7 +3504,7 @@
    "source": [
     "## Reverse Conjecture Map\n",
     "\n",
-    "![Reverse Conjecture Map](CS542-ConjectureMap.drawio.svg)"
+    "![Reverse Conjecture Map](images/CS542-ConjectureMap.drawio.svg)"
    ]
   },
   {
@@ -3517,7 +3517,7 @@
     "\n",
     "| Person | Tasks |\n",
     "| --- | --- |\n",
-    "| Everett | Off-the-shelf LLM prototype, Q-BERT, LoRA, GRPO, Graph RAG |\n",
+    "| Everett | Random Baseline, Off-the-shelf LLM prototype, Q-BERT, LoRA, GRPO, Graph RAG |\n",
     "| Tyson | Off-the-shelf LLMs, GPT-5 experiment, Retrieval Augmented Generation, Chain of Thought RAG |\n"
    ]
   }
